# ECM1400-battleships

./: README.md  pyproject.toml
docs/source/: components.rst  conf.py  index.rst  mp_game_engine.rst
src/: components.py  config.json  game_engine.py  main.py  mp_game_engine.py  placement.json  test_report.txt
src/templates/: main.html
src/tests/: config.json  context.py  test_custom.py
src/tests/bad_config/: bad_config_1.json  bad_config_2.json  bad_config_3.json  bad_config_4.json
src/tests/bad_placements/: test_placement_1.json  test_placement_2.json  test_placement_3.json  test_placement_5.json  test_placement_6.json
